# finsight

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
app/: Home.py
app/pages/: 1_Stock_Analysis.py  2_Document_QA.py  3_Chat.py
backend/: .env.example  NEXTJS_INTEGRATION.md  main.py  requirements.txt
backend/api/: dependencies.py
backend/api/routers/: chat.py  finance.py  rag.py
backend/api/schemas/: requests.py  responses.py
backend/api/services/: finance_service.py  rag_service.py  stock_analysis_service.py
config/: __init__.py  settings.py
core/: __init__.py  exceptions.py  logger.py
core/analysis/: technical.py
core/data/: stock_client.py
core/llm/: claude_client.py
core/rag/: pipeline.py
finsight-web/: .env.local.example  .vercel-deploy  README.md  next.config.js  next.config.ts  package.json  tailwind.config.ts  vercel.json
finsight-web/app/: globals.css  layout.tsx  page.tsx
finsight-web/app/components/charts/: StockChart.tsx
finsight-web/app/components/chat/: ChatPanel.tsx
finsight-web/app/components/layout/: MainDashboard.tsx  Sidebar.tsx
finsight-web/app/components/rag/: DocumentList.tsx  DocumentUpload.tsx
finsight-web/app/components/ui/: Badge.tsx  Spinner.tsx  (+1 more)
finsight-web/lib/: api.ts  utils.ts
finsight-web/store/: useFinSightStore.ts
finsight-web/types/: index.ts
pages/: 1_Stock_Analysis.py  2_Document_QA.py  3_Chat.py
scripts/: setup.sh
tests/: test_stock_client.py  test_technical.py
(+1 files in other folders)
