[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "finsight"
version = "0.1.0"
description = "AI-powered financial analysis assistant"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "config*", "app*"]

# ── Black ─────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── Ruff ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length — handled by black
    "B008",  # do not perform function calls in default args
]

[tool.ruff.lint.isort]
known-first-party = ["core", "config", "app"]

# ── Mypy ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests/"]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=core --cov-report=term-missing"
